# Pets

./: .gitignore  README.md
rust-pets/: Cargo.toml  GPchan.txt  build.rs  gemmi.txt
rust-pets/src/: config.rs  llm.rs  main.rs  monitor.rs  pet.rs
