[package]
name = "rust-pets"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
nvml-wrapper = "0.10"
image = { version = "0.24", features = ["png"] }
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
include_dir = "0.7"
device_query = "2.1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"      # 크기 최적화 (s 또는 z)
lto = true           # Link Time Optimization: 미사용 코드 제거
codegen-units = 1    # 병렬 컴파일을 제한하여 최적화 기회 극대화
panic = "abort"      # 패닉 발생 시 스택 추적 정보 제거
strip = true         # 심볼 정보 및 디버그 정보 강제 제거